--- a/milk4.ipynb
+++ b/milk4.ipynb
@@ -2192,49 +2192,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "```\n",
-    "feature:\n",
-    "month_fea, field_fea, id_fea, father_fea, mother_fea, month_3_fea, month_4_fea,\n",
-    "胎次, 泌乳天數, 月齡, 配種次數, 採樣_最近分娩, is_disease, `specs`\n",
-    "hyper:\n",
-    "max_depth=None, learning_rate=0.2, n_estimators=500, subsample=0.8, n_jobs=8, colsample_bytree=0.9\n",
-    "```\n",
-    "1. 全用 => 5.569513909276122\n",
-    "2. 去掉 id_fea => 5.7\n",
-    "3. 去掉 father_fea => 5.614918057221602\n",
-    "4. 去掉 mother_fea => 5.567117544546619\n",
-    "5. 去掉 mother_fea, 採樣_最近分娩 => 5.546539576478557\n",
-    "6. 去掉 mother_fea, 採樣_最近分娩, specs => 5.571134430503368\n",
-    "7. 去掉 mother_fea, 採樣_最近分娩, is_disease => 5.607048854513983\n",
-    "8. 去掉 mother_fea, 採樣_最近分娩, 胎次 => 5.586450300536761\n",
-    "9. 去掉 mother_fea, 採樣_最近分娩, month_4_fea => 5.543575874811644\n",
-    "10. 去掉 mother_fea, 採樣_最近分娩, month_4_fea，增加 is_no_milk當月 => 5.521250260030221\n",
-    "11. 去掉 mother_fea, 採樣_最近分娩, month_4_fea，增加 is_no_milk當月或前月 => 5.537155244281038\n",
-    "\n",
-    "```\n",
-    "feature:\n",
-    "month_fea, field_fea, id_fea, father_fea, month_3_fea, 胎次, 泌乳天數, 月齡, 配種次數, is_disease, `specs`\n",
-    "hyper:\n",
-    "max_depth=None, learning_rate=0.2, n_estimators=500, subsample=0.8, n_jobs=8, colsample_bytree=0.9\n",
-    "```\n",
-    "1. volume 挑2%~98%來訓練 ( 9 ~ 43 ) => 5.3860216137340045\n",
-    "2. volume 挑3%~97%來訓練 ( 10 ~ 41 ) => 5.322555174478275\n",
-    "3. volume 挑5%~95%來訓練 ( 10 ~ 39 ) => 5.201807385246551\n",
-    "\n",
-    "```\n",
-    "feature:\n",
-    "month_fea, field_fea, id_fea, selected_father, month_3_fea, 胎次, 泌乳天數, 月齡, 配種次數, is_disease, `specs`\n",
-    "hyper:\n",
-    "max_depth=None, learning_rate=0.2, n_estimators=500, subsample=0.8, n_jobs=8, colsample_bytree=0.9\n",
-    "```\n",
-    "1. volume 挑5%~95%來訓練 ( 10 ~ 39 ) => 5.18564322781415\n",
-    "2. volume 挑5%~95%來訓練 ( 10 ~ 39 )，增加selected_mother => 5.18683125292462"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 48,
    "metadata": {},
@@ -2628,83 +2585,11 @@
    "source": [
     "a.to_csv(\"submission_res_0703_3.csv\", index=None)"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "###"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = model.predict(x_te)\n",
-    "df_test[\"1\"] = prediction"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "a = df_test[[\"row_id\", \"1\"]].rename(columns={\"row_id\": \"ID\"})\n",
-    "# df_test[[\"row_id\", \"1\"]].rename(columns={\"row_id\": \"ID\"}).to_csv(\"submission_res.csv\", index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "pd.merge(a, df_submit, on=\"ID\", how=\"outer\").shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "len(df_submit)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a.to_csv(\"submission_res_0703.csv\", index=None)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "prediction = model.predict(x_val)\n",
-    "l, l_all = loss(y_val, prediction, return_losses=True)\n",
-    "l"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2718,7 +2603,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.9.5"
   }
  },
  "nbformat": 4,
